# marduk-tc-int

./: .gitignore  README.md  requirements.txt
android/app/src/main/cpp/: CMakeLists.txt  marduk_native_core.cpp  marduk_native_core.h
config/: default.json
docs/: integration_architecture.md  mad9ml_integration_guide.md  native_library_mapping.md
src/: MardukCommanderApp.ts  __init__.py  marduk_commander.py
src/components/: MardukCommanderUI.tsx
src/connectors/: tc_connector.py
src/core/cognitive/: cognitive_api.py
src/middleware/: bridge_server.py
src/native/bridge/: NativeBridge.ts
src/native/engines/: Mad9mlMobileRuntime.ts
tests/: test_cognitive_api.py
